fix(page hero landing): fix double scroll issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -104,9 +104,12 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 html,
 body {
-  height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -114,6 +117,7 @@ body {
 }
 
 body {
+  min-height: 100%;
   background-color: var(--bg);
   color: var(--text);
   font-family: Arial, Helvetica, sans-serif;
@@ -185,8 +189,3 @@ body {
 /* =====================================================
    RESPONSIVE
    ===================================================== */
-@media (max-width: 1023px) {
-  body {
-    padding-top: 60px;
-  }
-}
